--- a/index.html
+++ b/index.html
@@ -5,46 +5,72 @@
 	<link rel="apple-touch-icon" sizes="76x76" href="material/assets/img/apple-icon.png">
 	<link rel="icon" type="image/png" href="material/assets/img/favicon.png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<title>Fabiano Couto - Analise e Desenvolvimento de Sistemas</title>
+	<title>Fabiano Couto - Full Stack Developer / Systems Analyst</title>
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 	<meta name="theme-color" content="#000000" />
     <meta name="mobile-web-app-capable" content="yes" />
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
- 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
- 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+ 	<link rel="stylesheet" href="assets/css/material-kit.min.css">
  	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-<div class="container fadeInDown animate">
-	<div class="row">
-      <div class="col s12 m4 offset-m4">
-      	<div class="section center">
-      		<img src="assets/img/profile.jpg" class="img-profile circle responsive-img z-depth-3">
-      	</div>
-      	<div class="section center">
-	      	<h5 class="text-logo">Fabiano <span>Couto</span></h5>
-	      	<div class="divider"></div>
-	      	<p class="light">Analise e Desenvolvimento de Sistemas</p>
-	      	<p>
-	      		<a href="http://www.fabianocouto.com.br/blog" target="_blank" class="btn btn-floating blue accent-4" title="Blog">
-	      			<span class="fa fa-wordpress"></span>
-	      		</a>
-	      		&nbsp;
-	      		<a href="https://github.com/fabianocouto" target="_blank" class="btn btn-floating blue accent-4" title="Github">
-	      			<span class="fa fa-github"></span>
-	      		</a>
-	      		&nbsp;
-	      		<a href="https://www.linkedin.com/in/fabianoclima/" target="_blank" class="btn btn-floating blue accent-4" title="LinkdIn">
-	      			<span class="fa fa-linkedin"></span>
-	      		</a>
-	      	</p>
-	    </div>
-      </div>
+<nav class="navbar fixed-top navbar-inverse navbar-expand-lg bg-dark" role="navigation-demo">
+    <div class="container">
+        <div class="navbar-translate">
+            <a class="navbar-brand" href="#">Fabiano Couto</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+        <div class="collapse navbar-collapse" id="menu">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="http://www.fabianocouto.com.br/blog" target="_blank" class="nav-link">
+                        <i class="fa fa-wordpress"></i> Wordpress
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="https://github.com/fabianocouto" target="_blank" class="nav-link">
+                        <i class="fa fa-github"></i> Github
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="https://www.linkedin.com/in/fabianocoutol" target="_blank" class="nav-link">
+                        <i class="fa fa-linkedin"></i> Linkedin
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="https://twitter.com/fabianocoutol" target="_blank" class="nav-link">
+                        <i class="fa fa-twitter"></i> Twitter
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class="page-header header-filter" data-parallax="true" style="background-image: url('assets/img/city.jpg'); transform: translate3d(0px, 0px, 0px);">
+	<div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1 class="title">
+                	Full Stack Developer
+                	<small class="d-block text-warning">
+                		Systems Analyst
+                	</small>
+               </h1>
+                <h4>
+                	I'm a developer, not because of the technologies and programming languages that I knows, but because of everything I'm willing to learn.
+                </h4>
+            </div>
+        </div>
     </div>
 </div>
-<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+<script src="assets/js/material-kit.min.js"></script>
 </body>
 </html>
