--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="row">
             <div class="col-md-12">
                 <h1 class="title">
-                	Full Stack Developer
+                	Full Stack Developer (AWS Test)
                 	<small class="d-block text-warning">
                 		Systems Analyst
                 	</small>
