--- a/whatsapp/index.html
+++ b/whatsapp/index.html
@@ -3,10 +3,22 @@
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<title>Whatsapp - Open Chat - Fabiano Couto</title>
+	<title>WhatsApp - Open Chat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <meta name="description" content="Whatsapp - Open Chat - Just enter the phone number" />
+    <meta name="description" content="WhatsApp - Open Chat - Just enter the phone number" />
     <meta name="keywords" content="whatsapp, open, chat, phone, number" />
+    <meta name="og:type" content="website">
+    <meta name="og:site_name" content="WhatsApp - Open Chat">
+    <meta name="og:locale" content="pt-BR">
+    <meta name="og:title" content="WhatsApp - Open Chat">
+    <meta name="og:description" content="WhatsApp - Open Chat - Just enter the phone number">
+    <meta name="og:image" content="screenshot.png">
+    <meta name="og:image:alt" content="WhatsApp - Open Chat">
+    <meta name="og:image:type" content="image/png">
+    <meta name="theme-color" content="#008080" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="msapplication-TileColor" content="#008080">
+    <meta name="msapplication-TileImage" content="icon/ms-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="57x57" href="icon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="icon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="icon/apple-icon-72x72.png">
@@ -21,17 +33,14 @@
     <link rel="icon" type="image/png" sizes="96x96" href="icon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
     <link rel="manifest" href="manifest.json">
-    <meta name="msapplication-TileColor" content="#008080">
-    <meta name="msapplication-TileImage" content="icon/ms-icon-144x144.png">
-	<meta name="theme-color" content="#008080" />
-    <meta name="mobile-web-app-capable" content="yes" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body class="h-100 d-flex align-items-center justify-content-center text-white" style="background-color: teal;">
+    <img src="screenshot.png" alt="WhatsApp Open Chat" class="d-none" />
     <div>
         <h1 class="text-white">
-            <span class="fab fa-whatsapp"></span> Whtasapp
+            <span class="fab fa-whatsapp"></span> WhatsApp
             <small class="d-block text-right border-top mt-1 pt-1 h6">
                 Open Chat
             </small>
