--- a/whatsapp/index.html
+++ b/whatsapp/index.html
@@ -1,43 +1,46 @@
 <!doctype html>
 <html lang="en" class="h-100">
 <head>
+    <script>var baseURL = window.location.pathname;</script>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<title>WhatsApp - Open Chat</title>
+	<title>WhatsApp Chat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <meta name="description" content="WhatsApp - Open Chat - Just enter the phone number" />
+    <meta name="description" content="WhatsApp Chat - Just enter the phone number" />
     <meta name="keywords" content="whatsapp, open, chat, phone, number" />
     <meta name="og:type" content="website">
-    <meta name="og:site_name" content="WhatsApp - Open Chat">
+    <meta name="og:site_name" content="WhatsApp Chat">
     <meta name="og:locale" content="pt-BR">
-    <meta name="og:title" content="WhatsApp - Open Chat">
-    <meta name="og:description" content="WhatsApp - Open Chat - Just enter the phone number">
-    <meta name="og:image" content="screenshot.png">
-    <meta name="og:image:alt" content="WhatsApp - Open Chat">
+    <meta name="og:title" content="WhatsApp Chat">
+    <meta name="og:description" content="WhatsApp Chat - Just enter the phone number">
+    <meta name="og:image" content="assets/img/screenshot.png">
+    <meta name="og:image:alt" content="WhatsApp Chat">
     <meta name="og:image:type" content="image/png">
     <meta name="theme-color" content="#008080" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="msapplication-TileColor" content="#008080">
     <meta name="msapplication-TileImage" content="icon/ms-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="57x57" href="icon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="icon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="icon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="icon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="icon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="icon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="icon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="icon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="icon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="icon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/img/icon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/img/icon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/img/icon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/icon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/img/icon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/img/icon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/img/icon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/img/icon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="assets/img/icon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/img/icon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icon/favicon-16x16.png">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="assets/js/app.js"></script>
 </head>
 <body class="h-100 d-flex align-items-center justify-content-center text-white" style="background-color: teal;">
-    <img src="screenshot.png" alt="WhatsApp Open Chat" class="d-none" />
+    <img src="assets/img/screenshot.png" alt="WhatsApp Open Chat" class="d-none" />
     <div>
         <h1 class="text-white">
             <span class="fab fa-whatsapp"></span> WhatsApp
@@ -50,17 +53,5 @@
         </form>
         <p>Just enter the phone number.</p>
     </div>
-<script>
-if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('./sw.js').then(function(registration) {
-        // console.log('SW Registered');
-        // console.log(registration);
-    });
-    navigator.serviceWorker.ready.then(function(registration) {
-        // console.log('SW Ready');
-        // console.log(registratio);
-    });
-}
-</script>
 </body>
 </html>
