--- a/whatsapp/index.html
+++ b/whatsapp/index.html
@@ -41,7 +41,7 @@
 </head>
 <body class="h-100 d-flex align-items-center justify-content-center text-white" style="background-color: teal;">
     <img src="assets/img/screenshot.png" alt="WhatsApp Open Chat" class="d-none" />
-    <div>
+    <div class="openchat">
         <h1 class="text-white">
             <span class="fab fa-whatsapp"></span> WhatsApp
             <small class="d-block text-right border-top mt-1 pt-1 h6">
