--- a/whatsapp/index.html
+++ b/whatsapp/index.html
@@ -48,10 +48,12 @@
                 Open Chat
             </small>
         </h1>
-        <form action="https://api.whatsapp.com/send" class="form-group mt-3">
-            <input name="phone"  type="number" placeholder="Example: 55219888444" class="form-control" required>
+        <form action="https://api.whatsapp.com/send" class="mt-3" style="display: none;">
+            <div class="form-group">
+                <input name="phone"  type="number" placeholder="Example: 55219888444" class="form-control" required>
+            </div>
+            <p>Just enter the phone number.</p>
         </form>
-        <p>Just enter the phone number.</p>
     </div>
 </body>
 </html>
